--- a/index.html
+++ b/index.html
@@ -141,6 +141,28 @@
     </div>
 
     <button class="btn btn-lg btn-primary btn-block" type="button">Analyze</button>
+
+    <table data-toggle="table" id="result">
+        <thead>
+        <tr>
+            <th>Item ID</th>
+            <th>Item Name</th>
+            <th>Item Price</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Item 1</td>
+            <td>$1</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Item 2</td>
+            <td>$2</td>
+        </tr>
+        </tbody>
+    </table>
 </form>
 </body>
 </html>
