--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,6 @@
             <p class="mt-5 mb-3 text-muted">© jojoldu</p>
         </form>
     </main>
-<script src="./dist/js/bundle.js"></script>
+<script src="js/bundle.js"></script>
 </body>
 </html>
