--- a/public/index.html
+++ b/public/index.html
@@ -4,150 +4,20 @@
     <meta charset="UTF-8">
     <title>Tistory Posts Per Month</title>
     <meta property="og:title" content="Tistory Posts Per Month">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.1/dist/bootstrap-table.min.css">
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
+    <link rel="stylesheet" href="main.css">
 
-        body {
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-align: center;
-            align-items: center;
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
-
-        .form-signin {
-            width: 100%;
-            max-width: 420px;
-            padding: 15px;
-            margin: auto;
-        }
-
-        .form-label-group {
-            position: relative;
-            margin-bottom: 1rem;
-        }
-
-        .form-label-group input,
-        .form-label-group label {
-            height: 3.125rem;
-            padding: .75rem;
-        }
-
-        .form-label-group label {
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: block;
-            width: 100%;
-            margin-bottom: 0; /* Override default `<label>` margin */
-            line-height: 1.5;
-            color: #495057;
-            pointer-events: none;
-            cursor: text; /* Match the input under the label */
-            border: 1px solid transparent;
-            border-radius: .25rem;
-            transition: all .1s ease-in-out;
-        }
-
-        .form-label-group input::-webkit-input-placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input::-moz-placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input:-ms-input-placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input::-ms-input-placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input::placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input:not(:-moz-placeholder-shown) {
-            padding-top: 1.25rem;
-            padding-bottom: .25rem;
-        }
-
-        .form-label-group input:not(:-ms-input-placeholder) {
-            padding-top: 1.25rem;
-            padding-bottom: .25rem;
-        }
-
-        .form-label-group input:not(:placeholder-shown) {
-            padding-top: 1.25rem;
-            padding-bottom: .25rem;
-        }
-
-        .form-label-group input:not(:-moz-placeholder-shown) ~ label {
-            padding-top: .25rem;
-            padding-bottom: .25rem;
-            font-size: 12px;
-            color: #777;
-        }
-
-        .form-label-group input:not(:-ms-input-placeholder) ~ label {
-            padding-top: .25rem;
-            padding-bottom: .25rem;
-            font-size: 12px;
-            color: #777;
-        }
-
-        .form-label-group input:not(:placeholder-shown) ~ label {
-            padding-top: .25rem;
-            padding-bottom: .25rem;
-            font-size: 12px;
-            color: #777;
-        }
-
-        /* Fallback for Edge
-        -------------------------------------------------- */
-        @supports (-ms-ime-align: auto) {
-            .form-label-group {
-                display: -ms-flexbox;
-                display: flex;
-                -ms-flex-direction: column-reverse;
-                flex-direction: column-reverse;
-            }
-
-            .form-label-group label {
-                position: static;
-            }
-
-            .form-label-group input::-ms-input-placeholder {
-                color: #777;
-            }
-        }
-        .fw-normal {
-            font-weight: 400!important;
-        }
-        .mb-3 {
-            margin-bottom: 1rem!important;
-        }
-        .mt-5 {
-            margin-top: 3rem!important;
-        }
-        .text-muted {
-            color: #6c757d!important;
-        }
-    </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-table@1.18.1/dist/bootstrap-table.min.js"></script>
 </head>
 <body class="text-center">
     <main class="form-signin">
         <form>
+            <h1 class="h3 mb-3 fw-normal">티스토리 월별 포스팅수 계산기</h1>
+            <br>
             <h1 class="h3 mb-3 fw-normal">티스토리 블로그명</h1>
             <div class="form-label-group">
                 <input type="text" id="blogName" class="form-control" placeholder="티스토리 블로그명" autofocus="" required>
@@ -174,5 +44,6 @@
         </form>
     </main>
 <script src="js/bundle.js"></script>
+    <script data-ad-client="ca-pub-5349709105365293" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
