다음 애드핏 추가

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
         <form>
             <h1 class="h3 mb-3 fw-normal">티스토리 월별 포스팅수 계산기</h1>
             <br>
+            <ins class="kakao_ad_area" style="display:none;"
+                 data-ad-unit    = "DAN-YKL2pGrihgIyVd8R"
+                 data-ad-width   = "300"
+                 data-ad-height  = "250"></ins>
+            <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+            <br>
             <h1 class="h3 mb-3 fw-normal">티스토리 블로그명</h1>
             <div class="form-label-group">
                 <input type="text" id="blogName" class="form-control" placeholder="티스토리 블로그명" autofocus="" required>
@@ -37,13 +43,19 @@
                 Analyze
             </button>
             <br>
+            <ins class="kakao_ad_area" style="display:none;"
+                 data-ad-unit    = "DAN-ushXXugcQ5glJsBs"
+                 data-ad-width   = "320"
+                 data-ad-height  = "100"></ins>
+            <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+            <br>
             <div class="mb-3">
                 <table id="table"></table>
             </div>
             <p class="mt-5 mb-3 text-muted">© jojoldu</p>
         </form>
     </main>
-<script src="js/bundle.js"></script>
+    <script src="js/bundle.js"></script>
     <script data-ad-client="ca-pub-5349709105365293" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
