--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Tistory Posts Per Month</title>
     <meta property="og:title" content="Tistory Posts Per Month">
+    <meta property="og:description" content="티스토리 월간 포스팅 수 조회 서비스">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.1/dist/bootstrap-table.min.css">
@@ -27,7 +28,7 @@
 <body class="text-center">
     <main class="form-signin">
         <form>
-            <h1 class="h3 mb-3 fw-normal">티스토리 월별 포스팅수 계산기</h1>
+            <h1 class="h3 mb-3 fw-normal">티스토리 월별 포스팅 수 조회</h1>
             <ins class="kakao_ad_area" style="display:none;"
                  data-ad-unit    = "DAN-YKL2pGrihgIyVd8R"
                  data-ad-width   = "300"
