--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,17 @@
     <main class="form-signin">
         <form>
             <h1 class="h3 mb-3 fw-normal">티스토리 월별 포스팅 수 조회</h1>
-            <ins class="kakao_ad_area" style="display:none;"
-                 data-ad-unit    = "DAN-YKL2pGrihgIyVd8R"
-                 data-ad-width   = "300"
-                 data-ad-height  = "250"></ins>
-            <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- tistory-ppm -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-5349709105365293"
+                 data-ad-slot="8936881046"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <br>
             <br>
             <h1 class="h3 mb-3 fw-normal">티스토리 블로그명</h1>
@@ -55,11 +61,17 @@
                 Analyze
             </button>
             <br>
-            <ins class="kakao_ad_area" style="display:none;"
-                 data-ad-unit    = "DAN-ushXXugcQ5glJsBs"
-                 data-ad-width   = "320"
-                 data-ad-height  = "100"></ins>
-            <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- tistory-ppm -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-5349709105365293"
+                 data-ad-slot="8936881046"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <br>
             <div class="mb-3">
                 <table id="table"></table>
